--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,13 @@
 {
-    "require-dev": {
-        "phpunit/phpunit": "^9.0"
-    },
     "autoload" : {
         "psr-4" : {
             "App\\" : "src/",
-            "Racing\\" : "Racing/"
+            "Racing\\" : "app/Racing/"
+            
         }
+    },
+    "require": {
+        "nikic/fast-route": "^1.3",
+        "twig/twig": "^3.0"
     }
 }
